# crawlab-sdk-cli

./: README.md  __init__.py  main.py  pyproject.toml  result.py
actions/: login.py  migrate.py  migrate_no_upgrade.py  upload.py
cli/: main.py
cli/actions/: upload.py
cli/cli_actions/: config.py  login.py  migrate.py
client/: __init__.py  client.py  request.py
config/: config.py  spider.py
scrapy/: pipelines.py
test/cli_action/: login_test.py  migrate_no_upgrade_test.py  migrate_test.py  upload_test.py
test/crawlab_config/: spider_test.py
test/crawlab_result/: result_service_test.py  result_test.py
utils/: __init__.py  data.py
